nw-demo/402_demo-web-ingress-path.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: web-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /tech-1-3
        backend:
          serviceName: demo-web-svc
          servicePort: 80
