nw-demo/403_demo-web-ingress-ip.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: web-ingress
spec:
  backend:
    serviceName: demo-web-svc
    servicePort: 80
