nw-demo/301_demo-nw-policy.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
   name: demo-nw-policy
spec:
   podSelector:
      matchLabels:
#         app: demo
   policyTypes:
   - Ingress
   ingress:
   - from:
     - namespaceSelector:
          matchLabels:
#            app: jumpbox
     ports:
#     - protocol: TCP
#       port: 80
