nw-demo/302_demo-nw-policy_backup.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
   name: demo-nw-policy
spec:
   podSelector:
      matchLabels:
#         app: demo
   policyTypes:
   - Ingress
   ingress:
   - from:
#     - ipBlock:
#          cidr: 172.20.0.0/16
#     - podSelector:
#          matchLabels:
#            app: jumpbox
     - namespaceSelector:
          matchLabels:
#            app: jumpbox
     ports:
#     - protocol: TCP
#       port: 80
#     - protocol: TCP
#       port: 8080
